--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                                                     <div class="intro__title">Double Сheeseburger</div>
                                                     <div class="intro__table">
                                                         <div class="intro__table-row">
-                                                            <span class="intro__text">Солнечная булочка, Две Говяжьи котлеты,Сырная котлета, Сыр, Айсберг, Огурец(соленый), Соус гриль, Кетчуп</span>
+                                                            <span class="intro__text">Солнечная булочка, Две Говяжьи
+                                                                котлеты,Сырная котлета, Сыр, Айсберг, Огурец(соленый),
+                                                                Соус гриль, Кетчуп</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -169,6 +171,13 @@
                                             <div class="intro-header__price">180 руб.</div>
                                         </div>
                                         <div class="intro-header__col">
+                                            <div class="intro__decor">
+                                                NEW
+                                            </div>
+                                            <div class="intro-header__text">Креветка в кляре</div>
+                                            <div class="intro-header__price">230 руб.</div>
+                                        </div>
+                                        <div class="intro-header__col">
                                             <div class="intro-header__text">Наггетсы</div>
                                             <div class="intro-header__price">140 руб.</div>
                                         </div>
@@ -247,6 +256,18 @@
                                                         </div>
                                                         <div class="intro__price">
                                                             <span>240 руб.</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Фреш ролл с креветкой</div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>280 руб.</span>
                                                         </div>
                                                     </div>
                                                     <!-- <div class="intro__row">
