--- a/index.html
+++ b/index.html
@@ -307,23 +307,6 @@
                                                         <div class="intro__col">
                                                             <div class="intro__table">
                                                                 <div class="intro__table-row">
-                                                                    <div class="intro__title">Мохито</div>
-                                                                </div>
-                                                                <div class="intro__table-row">
-                                                                    <span class="intro__text">Ром, Лайм,
-                                                                        Содовая, Сахарный сироп, Мята
-                                                                    </span>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="intro__price">
-                                                            <span>260 руб.</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="intro__row">
-                                                        <div class="intro__col">
-                                                            <div class="intro__table">
-                                                                <div class="intro__table-row">
                                                                     <div class="intro__title"> Кровавый виски </div>
                                                                 </div>
                                                                 <div class="intro__table-row">
@@ -370,6 +353,24 @@
                                                             <span>250 руб.</span>
                                                         </div>
                                                     </div>
+                                                    <div class="intro__row">
+                                                        <div class="intro__col">
+                                                            <div class="intro__table">
+                                                                <div class="intro__table-row">
+                                                                    <div class="intro__title">Мохито Класический</div>
+                                                                </div>
+                                                                <!-- <div class="intro__table-row">
+                                                                    <span class="intro__text">Ром, Лайм,
+                                                                        Содовая, Сахарный сироп, Мята
+                                                                    </span>
+                                                                </div> -->
+                                                            </div>
+                                                        </div>
+                                                        <div class="intro__price">
+                                                            <span>260 руб.</span>
+                                                        </div>
+                                                    </div>
+
 
 
                                                 </div>
