--- a/alko.html
+++ b/alko.html
@@ -152,11 +152,11 @@
                                                     <div class="intro__table-row">
                                                         <div class="intro__title">Мохито Класический</div>
                                                     </div>
-                                                    <!-- <div class="intro__table-row">
-                                                                    <span class="intro__text">Ром, Лайм,
-                                                                        Содовая, Сахарный сироп, Мята
-                                                                    </span>
-                                                                </div> -->
+                                                    <div class="intro__table-row">
+                                                        <span class="intro__text">Ром, Лайм,
+                                                            Содовая, Сахарный сироп, Мята
+                                                        </span>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
