--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <div class="intro-header__price">230 руб.</div>
                             </div>
                             <div class="intro-header__col">
-                                <div class="intro__decor">
+                                <div class="intro__decor intro__decor--two">
                                     NEW
                                 </div>
                                 <div class="intro-header__text">Кальмар в кляре</div>
