--- a/alko.html
+++ b/alko.html
@@ -150,7 +150,7 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Мохито Класический</div>
+                                                        <div class="intro__title">Мохито Классический</div>
                                                     </div>
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Ром, Лайм,
@@ -223,7 +223,7 @@
                                 <div class="intro-footer__wrap">
                                     <div class="intro-footer__rows">
                                         <div class="intro-footer__cols">
-                                            <div class="intro-footer__text">Класический лимонад</div>
+                                            <div class="intro-footer__text">Классический лимонад</div>
                                             <div class="intro-footer__price"><span>165 руб.</span></div>
                                         </div>
                                         <span class="intro-footer__subtext">Апельсин, Лимон, Сахарный сироп,
