--- a/alko.html
+++ b/alko.html
@@ -117,7 +117,7 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Голубые гаваи</div>
+                                                        <div class="intro__title">Голубые гавайи</div>
                                                     </div>
                                                     <div class="intro__table-row">
                                                         <span class="intro__text">Ром, Блю - кюрасао, Лимон
@@ -169,6 +169,51 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- <div class="intro-alko">
+                                <h1 class="intro-title">Алкогольные шоты</h1>
+                                <div class="intro-footer__wrap">
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Б-52</div>
+                                        <span class="intro-footer__subtext">Сливочный ликер, Кофейный ликер, Трипл-сек</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Скользкий сосок </div>
+                                        <span class="intro-footer__subtext">Ликер самбука, Сливочный ликер, гренадин</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Зеленый мексиканец</div>
+                                        <span class="intro-footer__subtext">Текила, Зеленый банан, Лимонный фреш</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Княжеский </div>
+                                        <span class="intro-footer__subtext">Ликер самбука, Сливочный ликер, гренадин</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Облако</div>
+                                        <span class="intro-footer__subtext">Сливочный ликер, Кофейный ликер, Трипл-сек</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Таракан </div>
+                                        <span class="intro-footer__subtext">Ликер самбука, Сливочный ликер, гренадин</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Текила-бум</div>
+                                        <span class="intro-footer__subtext">Текила, Зеленый банан, Лимонный фреш</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Рыжая Собака</div>
+                                        <span class="intro-footer__subtext">Ликер самбука, Сливочный ликер, гренадин</span>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
+                                    </div>
+                                </div>
+                            </div> -->
                         </div>
                         <div class="intro-footer-wrap intro-footer-wrap--watter">
                             <div class="intro-footer">
@@ -219,7 +264,7 @@
 
                             </div>
                             <div class="intro-footer intro-footer--two">
-                                <h1 class="intro-title">Лимонады</h1>
+                                <h1 class="intro-title">Лимонад и Молочный коктейль</h1>
                                 <div class="intro-footer__wrap">
                                     <div class="intro-footer__rows">
                                         <div class="intro-footer__cols">
@@ -231,12 +276,11 @@
                                     </div>
                                     <div class="intro-footer__rows">
                                         <div class="intro-footer__cols">
-                                            <div class="intro-footer__text">Клубничный лимонад</div>
+                                            <div class="intro-footer__text">Молочнй коктейль</div>
 
-                                            <div class="intro-footer__price"><span>200 руб.</span></div>
+                                            <div class="intro-footer__price"><span>180 руб.</span></div>
                                         </div>
-                                        <span class="intro-footer__subtext">Клубника, Лимонный фреш, Сироп
-                                            клубника, Мята, Содовая</span>
+                                        <span class="intro-footer__subtext">Сироп на выбор</span>
                                     </div>
                                 </div>
 
@@ -265,7 +309,14 @@
                                         <span class="intro-footer__subtext">0,33мл</span>
                                         <div class="intro-footer__price"><span>210 руб.</span></div>
                                     </div>
-
+                                    <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Балтика 0
+                                            <span class="intro-footer__subtext">Грейфрут / Малина
+                                            </span>
+                                        </div>
+                                        <span class="intro-footer__subtext">0,33мл</span>
+                                        <div class="intro-footer__price"><span>100 руб.</span></div>
+                                    </div>
                                 </div>
 
                             </div>
