--- a/alko.html
+++ b/alko.html
@@ -276,7 +276,7 @@
                                     </div>
                                     <div class="intro-footer__rows">
                                         <div class="intro-footer__cols">
-                                            <div class="intro-footer__text">Молочнй коктейль</div>
+                                            <div class="intro-footer__text">Молочный коктейль</div>
 
                                             <div class="intro-footer__price"><span>180 руб.</span></div>
                                         </div>
@@ -311,7 +311,7 @@
                                     </div>
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Балтика 0
-                                            <span class="intro-footer__subtext">Грейфрут / Малина
+                                            <span class="intro-footer__subtext">Грейпфрут / Малина
                                             </span>
                                         </div>
                                         <span class="intro-footer__subtext">0,33мл</span>
