--- a/alko.html
+++ b/alko.html
@@ -264,9 +264,19 @@
 
                             </div>
                             <div class="intro-footer intro-footer--two">
-                                <h1 class="intro-title">Лимонад и Молочный коктейль</h1>
+                                <h1 class="intro-title">Лимонад, Молочный коктейль, Холодный Чай</h1>
                                 <div class="intro-footer__wrap">
                                     <div class="intro-footer__rows">
+                                        <div class="intro-footer__rows">
+                                            <div class="intro-footer__cols">
+                                                <div class="intro-footer__text">Чай "Вишневый пунш" & "Малина мята
+                                                    персик"
+                                                </div>
+
+                                                <div class="intro-footer__price"><span>150 руб.</span></div>
+                                            </div>
+                                            <span class="intro-footer__subtext">Апельсин, Лимон, Мята, Сироп</span>
+                                        </div>
                                         <div class="intro-footer__cols">
                                             <div class="intro-footer__text">Классический лимонад</div>
                                             <div class="intro-footer__price"><span>165 руб.</span></div>
@@ -274,6 +284,7 @@
                                         <span class="intro-footer__subtext">Апельсин, Лимон, Сахарный сироп,
                                             Мята, Содовая</span>
                                     </div>
+
                                     <div class="intro-footer__rows">
                                         <div class="intro-footer__cols">
                                             <div class="intro-footer__text">Молочный коктейль</div>
