--- a/alko.html
+++ b/alko.html
@@ -47,17 +47,17 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Пина - колада</div>
+                                                        <div class="intro__title">Aperol Spritz</div>
                                                     </div>
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Ром, Сок ананасовый,
-                                                            сливки, сироп кокос
+                                                        <span class="intro__text">Апероль, Сухое шампанское,
+                                                            Содовая, Апельсин
                                                         </span>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>250 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
 
@@ -65,11 +65,11 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Виски - Сауэр </div>
+                                                        <div class="intro__title">Лавандовый Джин-Тоник</div>
                                                     </div>
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Виски, Белок,
-                                                            Лимонный фреш, Сахарный сироп
+                                                        <span class="intro__text">Джин, Тоник,
+                                                            Лимон, Лавандовый сироп
                                                         </span>
                                                     </div>
                                                 </div>
