--- a/alko.html
+++ b/alko.html
@@ -153,7 +153,7 @@
                                                         <div class="intro__title">Мохито Классический</div>
                                                     </div>
                                                     <div class="intro__table-row">
-                                                        <span class="intro__text">Ром, Лайм,
+                                                        <span class="intro__text">Ром, Лимон,
                                                             Содовая, Сахарный сироп, Мята
                                                         </span>
                                                     </div>
