--- a/alko.html
+++ b/alko.html
@@ -240,6 +240,11 @@
                                         <div class="intro-footer__price"><span>80 руб.</span></div>
                                     </div>
                                     <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Энергетик Gorilla</div>
+                                        <span class="intro-footer__subtext">0,45мл </span>
+                                        <div class="intro-footer__price"><span>100 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Burn</div>
                                         <span class="intro-footer__subtext">0,5л </span>
                                         <div class="intro-footer__price"><span>155 руб.</span></div>
