--- a/alko.html
+++ b/alko.html
@@ -294,7 +294,7 @@
                                         <div class="intro-footer__cols">
                                             <div class="intro-footer__text">Молочный коктейль</div>
 
-                                            <div class="intro-footer__price"><span>180 руб.</span></div>
+                                            <div class="intro-footer__price"><span>200 руб.</span></div>
                                         </div>
                                         <span class="intro-footer__subtext">Сироп на выбор</span>
                                     </div>
@@ -326,11 +326,11 @@
                                         <div class="intro-footer__price"><span>210 руб.</span></div>
                                     </div>
                                     <div class="intro-footer__col">
-                                        <div class="intro-footer__text">Балтика 0
-                                            <span class="intro-footer__subtext">Грейпфрут / Малина
-                                            </span>
+                                        <div class="intro-footer__text">Балтика 0 пшеничное
+                                            <!-- <span class="intro-footer__subtext">Грейпфрут / Малина
+                                            </span> -->
                                         </div>
-                                        <span class="intro-footer__subtext">0,33мл</span>
+                                        <span class="intro-footer__subtext">0,45мл</span>
                                         <div class="intro-footer__price"><span>95 руб.</span></div>
                                     </div>
                                 </div>
