--- a/alko.html
+++ b/alko.html
@@ -22,9 +22,6 @@
                         <div class="intro-wrapper--three">
                             <div class="intro-bar">
                                 <div class="intro__wrap">
-                                    <div class="intro__decor">
-                                        NEW
-                                    </div>
                                     <h1 class="intro-title">Коктейли со льдом
                                     </h1>
                                     <div class="intro__wrapper">
@@ -146,7 +143,7 @@
                                                 <span>250 руб.</span>
                                             </div>
                                         </div>
-                                        <div class="intro__row">
+                                        <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
@@ -162,10 +159,51 @@
                                             <div class="intro__price">
                                                 <span>260 руб.</span>
                                             </div>
+                                        </div> -->
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="intro-bar">
+                                <div class="intro__wrap">
+                                    <div class="intro__decor">
+                                        NEW
+                                    </div>
+                                    <h1 class="intro-title">Горячие напитки
+                                    </h1>
+                                    <div class="intro__wrapper">
+                                        <div class="intro__row">
+                                            <div class="intro__col">
+                                                <div class="intro__table">
+                                                    <div class="intro__table-row">
+                                                        <div class="intro__title">Глинтвей</div>
+                                                    </div>
+                                                    <span class="intro__text">Вино, лимон, апельсин, корица, бадьян, гвоздика
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>225 руб.</span>
+                                            </div>
                                         </div>
-
-
-
+                                        <div class="intro__row">
+                                            <div class="intro__col">
+                                                <div class="intro__table">
+                                                    <div class="intro__table-row">
+                                                        <div class="intro__title">Грог</div>
+                                                    </div>
+                                                    <div class="intro__table-row">
+                                                        <span class="intro__text">Ром, лимон, апельсин, корица, бадьян, гвоздика, черный чай
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>250 руб.</span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
